(executable
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-32-30"))
 (public_name timeteller)
 (name timeteller)
 (libraries daypack-lib
            cmdliner
            ptime.clock.os
            oseq
            lwt
            lwt.unix
            cohttp
            cohttp-lwt-unix
            yojson
            )
 (preprocess (pps lwt_ppx))
 )
